fixing layout issue

--- a/client/src/app.css
+++ b/client/src/app.css
@@ -1,7 +1,12 @@
-body {
+html, body {
+    height: 100%;
+    margin: 0;
+    overflow: hidden; /* Prevent scrolling on body */
     font-family: 'JetBrains Mono';
 }
-
+#root {
+    height: 100%; /* Ensures root element takes full height */
+}
 img{
     display: block;
 }
